Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9
-
None
-
Fedora 19
The Glorious Glasgow Haskell Compilation System, version 7.4.2
Description
When compiling the following two files:
a.thrift
include "b.thrift"
struct A {
1 : optional b.B elem
}
and
b.thrift
struct B { 1: optional i32 i }
with:
thrift --gen hs a.thrift
thrift --gen hs b.thrift
ghc gen-hs/A_Consts.hs gen-hs/A_Types.hs gen-hs/B_Consts.hs gen-hs/B_Types.h
I get an error:
gen-hs/A_Types.hs:54:15:
Not in scope: `read_B'
Perhaps you meant one of these:
`B_Types.read_B' (imported from B_Types), `read_A' (line 63)