THRIFT-2152 Generated Haskell files does not compile

fully qualified module names at usage site for structs

Patch: John Chee & Roger Meier